--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "unit": "jest --config test/unit/jest.conf.js --coverage",
     "test": "npm run unit",
     "lint": "eslint --ext .js src test/unit/specs",
-    "build:clean": "rimraf dist docs",
+    "build:clean": "rimraf dist",
     "build": "npm run build:clean && node build/build.js",
     "release": "npm version patch && npm publish"
   },
@@ -34,9 +34,7 @@
   },
   "devDependencies": {
     "chalk": "^2.0.1",
-    "chromedriver": "^2.27.2",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-spawn": "^5.0.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -47,16 +45,13 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
-    "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
-    "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
