--- a/package.json
+++ b/package.json
@@ -4,16 +4,14 @@
   "description": "A simple library that handles a few records easily",
   "keywords": "memory record small library",
   "author": "Akira Ikeda <pinpon.ikeda@gmail.com>",
-  "main": "src/memory_record.js",
+  "main": "lib/memory_record.js",
   "private": false,
   "homepage": "https://github.com/akicho8/js-memory-record/",
   "bugs": { "url": "http://github.com/akicho8/js-memory-record/issues", "email": "pinpon.ikeda@gmail.com"},
   "repository": { "type": "git", "url": "git@github.com:akicho8/js-memory-record.git"},
   "scripts": {
-    "unit": "jest --config test/unit/jest.conf.js --coverage",
-    "test": "npm run unit",
-    "build:clean": "rimraf dist",
-    "build": "npm run build:clean && node build/build.js",
+    "test": "jest --config test/unit/jest.conf.js --coverage",
+    "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
     "release": "npm test && npm build && npm version patch && npm publish"
   },
   "dependencies": {
@@ -32,21 +30,13 @@
   },
   "devDependencies": {
     "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
     "jest": "^21.2.0",
     "node-notifier": "^5.1.2",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "shelljs": "^0.7.6"
   },
   "engines": {
     "node": ">= 6.0.0",
