--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "bugs": { "url": "http://github.com/akicho8/js-memory-record/issues", "email": "pinpon.ikeda@gmail.com"},
   "repository": { "type": "git", "url": "git@github.com:akicho8/js-memory-record.git"},
   "scripts": {
-    "test": "jest --config test/unit/jest.conf.js --coverage",
+    "test": "jest --config test/jest.conf.js --coverage",
     "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
     "release": "npm test && npm build && npm version patch && npm publish"
   },
