--- a/package.json
+++ b/package.json
@@ -6,37 +6,33 @@
   "author": "Akira Ikeda <pinpon.ikeda@gmail.com>",
   "main": "lib/memory_record.js",
   "private": false,
-  "homepage": "https://github.com/akicho8/js-memory-record/",
-  "bugs": { "url": "http://github.com/akicho8/js-memory-record/issues", "email": "pinpon.ikeda@gmail.com"},
-  "repository": { "type": "git", "url": "git@github.com:akicho8/js-memory-record.git"},
+  "bugs": {
+    "url": "http://github.com/akicho8/js-memory-record/issues",
+    "email": "pinpon.ikeda@gmail.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:akicho8/js-memory-record.git"
+  },
   "scripts": {
     "test": "jest --config test/jest.conf.js --coverage",
     "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
-    "release": "npm test && npm build && npm version patch && npm publish"
+    "release": "npm test && npm run build && npm version patch && npm publish"
   },
   "dependencies": {
-    "babel-cli": "^6.26.0",
     "babel-core": "^6.22.1",
-    "babel-jest": "^22.0.1",
-    "babel-loader": "^7.1.1",
+    "lodash": "^4.17.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "lodash": "^4.17.4"
-  },
-  "devDependencies": {
-    "chalk": "^2.0.1",
     "jest": "^21.2.0",
-    "node-notifier": "^5.1.2",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6"
+    "rimraf": "^2.6.0"
   },
   "engines": {
     "node": ">= 6.0.0",
