--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "scripts": {
     "test": "jest --config test/jest.conf.js --coverage",
     "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
-    "release": "npm test && npm run build && git add -A && git commit -m '[chore] npm run build' && npm version patch && git push && git push --tags && npm publish"
+    "build:commit": "npm run build && git add -A && git commit -m '[chore] npm run build'",
+    "push": "npm test && npm run build:commit && git push",
+    "release": "npm run push && npm version patch && git push --tags"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
