--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
     "build:commit": "npm run build && git add -A && git commit -m '[chore] npm run build'",
     "push": "npm test && npm run build:commit && git push",
-    "release": "npm run push && npm version patch && git push --tags"
+    "release": "npm version patch && git push --tags && npm run publish"
   },
   "dependencies": {
     "babel-core": "^6.22.1",
