--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "release": "npm version patch && git push --tags && npm publish"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "babel-runtime": "latest",
+    "core-js": "latest",
+    "lodash": "latest"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
