--- a/package.json
+++ b/package.json
@@ -16,35 +16,20 @@
   },
   "scripts": {
     "test": "jest --config test/jest.conf.js --coverage",
-    "build": "rimraf lib && babel src -d lib --source-maps --no-comments",
+    "build": "babel src -d lib --source-maps --no-comments",
     "build:commit": "npm run build && git add -A && git commit -m '[chore] npm run build'",
     "push": "npm test && npm run build:commit && git push",
     "release": "npm run build:commit && npm version patch && git push --tags && npm publish"
   },
   "dependencies": {
-    "babel-runtime": "latest",
-    "core-js": "latest",
-    "lodash": "latest"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-cli": "^6.26.0",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "jest": "^21.2.0",
-    "rimraf": "^3.0.2"
-  },
-  "engines": {
-    "node": ">= 6.0.0",
-    "npm": ">= 3.0.0"
+    "@babel/cli": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
+    "jest": "^29.5.0"
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
+    "> 1%, not dead"
   ]
 }
