--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
     "url": "git@github.com:akicho8/js-memory-record.git"
   },
   "scripts": {
-    "test": "jest --config test/jest.conf.js --coverage",
-    "build": "babel src -d lib --source-maps --no-comments",
-    "build:commit": "npm run build && git add -A && git commit -m '[chore] npm run build'",
-    "push": "npm test && npm run build:commit && git push",
-    "release": "npm run build:commit && npm version patch && git push --tags && npm publish"
+    "test": "jest"
   },
   "dependencies": {
     "lodash": "^4.17.21"
