--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "type": "git",
     "url": "git@github.com:akicho8/js-memory-record.git"
   },
+  "browserslist": [
+    "> 1%, not dead"
+  ],
   "scripts": {
     "test": "jest"
   },
@@ -25,7 +28,7 @@
     "@babel/preset-env": "^7.20.2",
     "jest": "^29.5.0"
   },
-  "browserslist": [
-    "> 1%, not dead"
+  "files": [
+    "lib"
   ]
 }
